syntax = "proto3";
package lumnetwork.icacallbacks;

option go_package = "github.com/lum-network/chain/x/icacallbacks/types";
import "gogoproto/gogo.proto";
import "lumnetwork/icacallbacks/params.proto";
import "lumnetwork/icacallbacks/callback_data.proto";

// GenesisState defines the icacallbacks module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  string port_id = 2;
  repeated CallbackData callback_data_list = 3 [ (gogoproto.nullable) = false ];
}
